sort.basic.lessons.sort.basic.bubble.AlgBubbleSort3.scala.error
AlgBubbleSort3:4: error: '(' expected but '{' found.
  while {switch}
        ^